# PluginBoost

./: .gitignore  CMakeLists.txt  README.md
App/include/: pluginAPI.hpp
App/src/: main.cpp
Plugin/src/: pluginImpl.hpp  pluginImplAdd.cpp  pluginImplSub.cpp
